--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # pycharm files #
 ######################
 /.idea/
-
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/mysite.iml
+/.idea/vcs.xml
+celerybeat.pid
 *.pid
 
 # Compiled source #
